    [+] Added IFactoryProvider::categoryForTag().
    [+] Added IFactoryProvider::tagCategoryMap().
    [+] Added QtilitiesProcess::newStandardOutputMessage() and QtilitiesProcesss:newStandardErrorMessage().
    [+] Added QtilitiesFileInfo::updateRelativeToPath().
    [+] Added == and != overloads to QtilitiesFileInfo.
    [+] Added Task::setLastRunTime().
    [+] Added new class: FileSetInfo.

    [#] IFactoryProvider::providedFactoryTags() got a new OK parameter.
    [#] Renamed FileUtils::textFileHashCode() to FileUtils::fileHashCode() since it can now calculate has codes for both text and binary files.
    [#] Replaced FileUtils::compareTextFiles() and FileUtils::compareBinaryFiles() with a single FileUtils::compareFiles() function.
    [#] QtilitiesProcess's constructor got a new read_process_buffers parameter.
    [#] All functions on QtilitiesFileInfo are now available under linux as well.

    [*] Fixed some places in FileUtils where files were not closed properly.
    [*] Fixed bug in QtilitiesProperty constructor where it did not set the property name correctly when specified, resulting
        in isValid() returning false for valid properties.

    ============================
    QtilitiesCoreGui:
    ============================
    [+] You can now specify which widget logger engine message displays must be used by TaskManagerGui when assigning logger engines to tasks.
    [+] Each task can now explicitly specify the widget logger engine message displays that TaskManagerGui must use when assigning logger engines to it.
    [+] Widget logger engines much improved to allow multiple message tabs to be shown in a single widget logger engine.
    [+] Added ObserverWidget::view() function.
    [+} Added NamingPolicyFilter::subjectNameChanged() signal.
    [+] Logger::detachLoggerEngine() got a new delete_engine parameter.

    [#] LoggerGui's widget logger engine creation functions got new parameter allowing you to specify which message displays