@@ -165,6 +165,13 @@ QFileInfoList files = fu.findFilesUnderDir("c:/my_path",QDir::System | QDir::Hid
               <i>This function was added in %Qtilities v1.1.</i>
               */
             static bool comparePaths(const QString& path1, const QString& path2);
+            //! Converts a path to the native format of the underlying OS.
+            /*!
+              This function is similar to QDir::toNativeSeperators(), but it supports linux as well.
+
+              <i>This function was added in %Qtilities v1.2.</i>
+              */
+            static QString toNativeSeperators(const QString& path);
 
         private:
             QFileInfoList                   last_files_under_dir;
