@@ -254,6 +254,8 @@ Qtilities::Core::Interfaces::IExportable::ExportResultFlags Qtilities::Core::Sub
 }
 
 Qtilities::Core::Interfaces::IExportable::ExportResultFlags Qtilities::Core::SubjectTypeFilter::importBinary(QDataStream& stream, QList<QPointer<QObject> >& import_list) {
+    Q_UNUSED(import_list)
+
     IExportable::ExportResultFlags version_check_result = IExportable::validateQtilitiesImportVersion(exportVersion(),exportTask());
     if (version_check_result != IExportable::VersionSupported)
         return version_check_result;
